v2.4.5
----------------------------------------------------------------------------------------------------
 * Certificate/keys pairs are verified as matching before a renewal is accepted
   as successful or a staged renewal is replacing the existing certificates.
   This avoid potential mess ups in the md store file system to render the active
   certificates non-working. [@mkauf]

v2.4.4
----------------------------------------------------------------------------------------------------
 * Domain names in `<MDomain ...>` can now appear in quoted form. Fixes #257
 * Fixed a failure in ACME challenge selection that aborted further searches
   when the tls-alpn-01 method did not seem to be suitable. See #255
 * Changed the tls-alpn-01 setup to only become unsuitable when none of the
   dns names showed support for a configured 'Protocols ... acme-tls/1'. This
   allows use of tls-alpn-01 for dns names that are not mapped to a VirtualHost.

v2.4.3
----------------------------------------------------------------------------------------------------
 * Removed the old mod_ssl interworking code. The module now requires a
   Apache httpd 2.4.48 or newer.
 * Fixed a potential null pointer dereference if ACME/OCSP server returned
   2xx responses without content type. Reported by chuangwen.

v2.4.2
----------------------------------------------------------------------------------------------------
 * This release needs at least Apache httpd 2.4.48 or later.
 * Fixed missing definitions when compiling against libressl. [Giovanni Bechis <giovanni@paclan.it>]
 * Making sure mod_md initializes after mod_watchdog, as otherwise jobs are not registered.
 * Adjusted test cases to work with mod_tls for OCSP stapling.
 * Implemented the new OCSP provisioning hooks in apache core.
 * Extended test suite to run also against mod_tls. Run
   ```SSL_MODULE=tls pytest``` to load an installed `mod_tls` into the server.
   Using `mod_ssl` is the default.